Fix logo with on mobile.

--- a/less/layout.less
+++ b/less/layout.less
@@ -14,3 +14,7 @@
   flex: 1;
   padding: 1rem;
 }
+
+.layout-logo {
+  max-width: 100%;
+}
